fix grid spacing issue and add more formatting

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,3 @@ code {
         display: none;
     }
 }
-
-.test {
-    width: 100%;
-}
